--- a/src/main/resources/actors.conf
+++ b/src/main/resources/actors.conf
@@ -5,7 +5,7 @@ akka {
   stdout-loglevel = "DEBUG"
   extensions = ["com.romix.akka.serialization.kryo.KryoSerializationExtension$"]
   actor {
-    #provider = "cluster"  
+    provider = "cluster"  
     serializers {
       java = "akka.serialization.JavaSerializer"
       kryo = "com.romix.akka.serialization.kryo.KryoSerializer"
@@ -26,7 +26,7 @@ akka {
 			router = round-robin-pool
 			cluster {
 		        enabled = off
-		        max-nr-of-instances-per-node = 1
+		        max-nr-of-instances-per-node = 4
 		        allow-local-routees = on
 	      	}
 	    	}
@@ -41,9 +41,9 @@ akka {
     }
   }
 
-  #cluster {
-  #  seed-nodes = ["akka.tcp://name1@127.0.0.1:2551", "akka.tcp://name2@127.0.0.1:2552"]
-  #}
+  cluster {
+    seed-nodes = ["akka.tcp://akka-http-example@127.0.0.1:2551"]
+  }
 
 }
 
