--- a/src/test/resources/actors.conf
+++ b/src/test/resources/actors.conf
@@ -5,7 +5,7 @@ akka {
   stdout-loglevel = "DEBUG"
   extensions = ["com.romix.akka.serialization.kryo.KryoSerializationExtension$"]
   actor {
-    #provider = "cluster"  
+    provider = "cluster"  
     serializers {
       java = "akka.serialization.JavaSerializer"
       kryo = "com.romix.akka.serialization.kryo.KryoSerializer"
@@ -40,9 +40,9 @@ akka {
     }
   }
 
-  #cluster {
-  #  seed-nodes = ["akka.tcp://name1@127.0.0.1:2551", "akka.tcp://name2@127.0.0.1:2552"]
-  #}
+  cluster {
+    seed-nodes = ["akka.tcp://name1@127.0.0.1:2551", "akka.tcp://name2@127.0.0.1:2552"]
+  }
 
 }
 
